added k means clustering algorithm

--- a/demos/demo_random_forest.ipynb
+++ b/demos/demo_random_forest.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Random forests bootstrap the data and randomly select features. bootstrapping means that it samples a data-set with the same size as the original dataset, but with replacement. So if you have N data points, each tree will use N data points, but some my be duplicated (as it samples them one by one with replacement)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Classification Dataset"
    ]
   },
@@ -56,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:48<00:00, 20.61it/s]\n"
+      "100%|██████████| 1000/1000 [00:48<00:00, 20.51it/s]\n"
      ]
     },
     {
@@ -326,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,14 +366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2000/2000 [00:13<00:00, 150.14it/s]\n"
+      "100%|██████████| 2000/2000 [00:21<00:00, 92.92it/s] \n"
      ]
     },
     {
@@ -378,7 +385,7 @@
        " 'r2': 0.6345540861772576}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,6 +396,30 @@
     "model = RandomForestRegressor(n_estimators=2000, max_features=None, random_state=42, n_jobs=-2)\n",
     "model.fit(X_train, y_train)\n",
     "model.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5244900408434734"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "modelsk = RandomForestRegressor(n_estimators=2000, max_features=None, random_state=42, n_jobs=-2)\n",
+    "modelsk.fit(X_train, y_train)\n",
+    "modelsk.score(X_test, y_test)"
    ]
   },
   {
@@ -456,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
